valid_tests/operators/test2.go
// Test 2: Increment and decrement
func main() {
    x := 5
    x++
    y := x
    x--
    z := x
}
