invalid_tests/syntax_errors/test4.go
// Test 4: Invalid token
func main() {
    x := @invalid
}
